--- a/.github/workflows/predict_deploy_heal.yml
+++ b/.github/workflows/predict_deploy_heal.yml
@@ -33,6 +33,7 @@ env:
   SELECTOR_LABEL:      app
   SELECTOR_VALUE:      backend
   DISABLE_RATE_LIMIT:  true
+  METRICS_WAIT_TIME:   120  # Added metrics collection timeout
 
 jobs:
   build-deploy-heal:
@@ -127,28 +128,88 @@ jobs:
           kubectl -n "${EKS_NAMESPACE}" apply -f kubernetes/frontend-deploy.yaml
           kubectl -n "${EKS_NAMESPACE}" set image deployment/${FRONTEND_DEPLOY} ${FRONTEND_CONTAINER}="${FRONTEND_IMAGE}"
 
+      - name: Verify scrape interval
+        run: |
+          echo "ServiceMonitor configuration:"
+          kubectl -n "${EKS_NAMESPACE}" get servicemonitor backend -o yaml | grep -A 2 endpoints
+          
+          echo "Prometheus config:"
+          kubectl -n monitoring exec prometheus-prometheus-kube-prometheus-prometheus-0 -- \
+            cat /etc/prometheus/config_out/prometheus.env.yaml | \
+            grep -A 5 "job_name: .*prod/backend"
+
+      - name: Generate sustained traffic
+        run: |
+          # Create dedicated load generator deployment
+          kubectl apply -n "${EKS_NAMESPACE}" -f - <<EOF
+          apiVersion: apps/v1
+          kind: Deployment
+          metadata:
+            name: loadgen
+          spec:
+            replicas: 1
+            selector:
+              matchLabels:
+                app: loadgen
+            template:
+              metadata:
+                labels:
+                  app: loadgen
+              spec:
+                containers:
+                - name: main
+                  image: nicolaka/netshoot
+                  command: ["/bin/sh", "-c"]
+                  args:
+                    - >
+                      while true; do
+                        curl -s "http://backend:5000/healthz";
+                        curl -s "http://backend:5000/predict" -H 'Content-Type: application/json' \
+                          -d '{"features": [0,10,50000000,1,0,0,0]}';
+                        sleep 0.2;
+                      done
+                resources:
+                  requests:
+                    cpu: 10m
+                    memory: 32Mi
+          EOF
+          
+          # Wait for load generator to start
+          kubectl -n "${EKS_NAMESPACE}" wait --for=condition=available deploy/loadgen --timeout=60s
+
       - name: Wait for backend rollout
         run: kubectl -n "${EKS_NAMESPACE}" rollout status deployment/${BACKEND_DEPLOY} --timeout=5m
 
       - name: Wait for frontend rollout
         run: kubectl -n "${EKS_NAMESPACE}" rollout status deployment/${FRONTEND_DEPLOY} --timeout=5m
 
+      - name: Verify metrics scraping
+        run: |
+          # Wait for Prometheus to discover targets
+          sleep 30
+          
+          # Start port-forward to Prometheus
+          kubectl -n monitoring port-forward svc/prometheus-operated 9090:9090 >/dev/null &
+          PF_PID=$!
+          sleep 5
+          
+          # Check if backend is being scraped
+          if curl -s "http://localhost:9090/api/v1/targets" | \
+             jq -e '.data.activeTargets[] | select(.scrapePool | contains("prod/backend"))' >/dev/null; then
+            echo "✅ Backend is being scraped by Prometheus"
+          else
+            echo "❌ Backend not found in Prometheus targets"
+            exit 1
+          fi
+          
+          # Cleanup port-forward
+          kill $PF_PID
+
       - name: Install jq and Python deps
         run: |
           sudo apt-get update && sudo apt-get install -y jq
           python3 -m pip install --upgrade pip
-          python3 -m pip install requests
-
-      - name: Warm-up backend for real metrics
-        run: |
-          kubectl -n "${EKS_NAMESPACE}" port-forward svc/${BACKEND_SERVICE} 5000:5000 >/tmp/pf-backend.log 2>&1 &
-          echo $! > /tmp/pf_backend.pid
-          for i in {1..60}; do curl -sf http://127.0.0.1:5000/healthz && break || sleep 1; done
-          for i in {1..300}; do
-            curl -s -m 2 http://127.0.0.1:5000/predict -H 'Content-Type: application/json' \
-              --data '{"restart_count_last_5m":0,"cpu_usage_pct":10,"memory_usage_bytes":5e7,"ready_replica_ratio":1,"unavailable_replicas":0,"network_receive_bytes_per_s":0,"http_5xx_error_rate":0}' >/dev/null || true
-          done
-          kill $(cat /tmp/pf_backend.pid) 2>/dev/null || true
+          python3 -m pip install requests prometheus-api-client
 
       - name: Predict from runtime metrics
         id: predict
@@ -159,111 +220,137 @@ jobs:
           THRESHOLD: ${{ env.RISK_THRESHOLD }}
           SEL_LABEL: ${{ env.SELECTOR_LABEL }}
           SEL_VALUE: ${{ env.SELECTOR_VALUE }}
+          RETRY_COUNT: 5  # Added retry configuration
         shell: bash
         run: |
           set -euo pipefail
+          attempt=1
+          max_attempts=${RETRY_COUNT:-3}
+          
+          while [ $attempt -le $max_attempts ]; do
+            echo "Attempt $attempt/$max_attempts to collect metrics"
+            
+            # Start Prometheus port-forward
+            kubectl -n "$PROM_NS" port-forward svc/"$PROM_SVC" 9090:9090 >/tmp/pf-prom.log 2>&1 &
+            PROM_PID=$!
+            trap "kill $PROM_PID 2>/dev/null || true" EXIT
+            
+            # Wait for Prometheus readiness
+            for i in {1..30}; do
+              curl -sf http://localhost:9090/-/ready >/dev/null && break || sleep 2
+            done
 
-          kubectl -n "$PROM_NS" get svc "$PROM_SVC" -o name
-          kubectl -n "$PROM_NS" port-forward svc/"$PROM_SVC" 9090:9090 >/tmp/pf-prom.log 2>&1 &
-          echo $! > /tmp/pf_prom.pid
-          trap 'kill $(cat /tmp/pf_prom.pid) 2>/dev/null || true' EXIT
-          for i in {1..60}; do curl -sf http://127.0.0.1:9090/-/ready >/dev/null && break || sleep 1; done
+            # Query function with retries
+            query_prometheus() {
+              local query="$1"
+              local retries=3
+              local result=""
+              
+              while [ $retries -gt 0 ]; do
+                result=$(curl -sG "http://localhost:9090/api/v1/query" \
+                  --data-urlencode "query=$query" \
+                  -H "Accept: application/json")
+                
+                # Validate we got numeric results
+                if echo "$result" | jq -e '.data.result[0].value[1] | tonumber? // empty' >/dev/null; then
+                  echo "$result"
+                  return 0
+                fi
+                
+                retries=$((retries-1))
+                sleep 5
+              done
+              
+              echo "{}"
+              return 1
+            }
 
-          py() { python3 - "$@"; }
+            # Fetch metrics
+            cpu_query="rate(container_cpu_usage_seconds_total{namespace=\"$NS\",pod=~\"$SEL_VALUE-.*\"}[2m]) * 100"
+            cpu_data=$(query_prometheus "$cpu_query")
+            cpu_value=$(echo "$cpu_data" | jq '[.data.result[].value[1] | tonumber] | if length > 0 then add / length else 0 end')
+            
+            mem_query="avg(container_memory_usage_bytes{namespace=\"$NS\",pod=~\"$SEL_VALUE-.*\"})"
+            mem_data=$(query_prometheus "$mem_query")
+            mem_value=$(echo "$mem_data" | jq '[.data.result[].value[1] | tonumber] | if length > 0 then add / length else 0 end')
+            
+            restart_query="increase(kube_pod_container_status_restarts_total{namespace=\"$NS\",pod=~\"$SEL_VALUE-.*\"}[5m])"
+            restart_data=$(query_prometheus "$restart_query")
+            restart_value=$(echo "$restart_data" | jq '[.data.result[].value[1] | tonumber] | if length > 0 then add / length else 0 end')
+            
+            ready_query="kube_deployment_status_replicas_ready{namespace=\"$NS\",deployment=\"$BACKEND_DEPLOY\"} / kube_deployment_spec_replicas{namespace=\"$NS\",deployment=\"$BACKEND_DEPLOY\"}"
+            ready_data=$(query_prometheus "$ready_query")
+            ready_value=$(echo "$ready_data" | jq '[.data.result[].value[1] | tonumber] | if length > 0 then add / length else 0 end')
+            
+            unavail_query="kube_deployment_status_replicas_unavailable{namespace=\"$NS\",deployment=\"$BACKEND_DEPLOY\"}"
+            unavail_data=$(query_prometheus "$unavail_query")
+            unavail_value=$(echo "$unavail_data" | jq '[.data.result[].value[1] | tonumber] | if length > 0 then add / length else 0 end')
+            
+            net_query="rate(container_network_receive_bytes_total{namespace=\"$NS\",pod=~\"$SEL_VALUE-.*\"}[2m])"
+            net_data=$(query_prometheus "$net_query")
+            net_value=$(echo "$net_data" | jq '[.data.result[].value[1] | tonumber] | if length > 0 then add / length else 0 end')
+            
+            error_query="rate(http_server_errors_total{namespace=\"$NS\",pod=~\"$SEL_VALUE-.*\"}[2m])"
+            error_data=$(query_prometheus "$error_query")
+            error_value=$(echo "$error_data" | jq '[.data.result[].value[1] | tonumber] | if length > 0 then add / length else 0 end')
 
-          FEATURES=$(py <<'PY'
-          import json, requests, os
-          ns = os.getenv("NS")
-          label = os.getenv("SEL_LABEL", "app")
-          val = os.getenv("SEL_VALUE", "backend")
-          threshold = float(os.getenv("THRESHOLD", "0.70"))
-          url = "http://127.0.0.1:9090/api/v1/query"
+            features=$(jq -n \
+              --argjson cpu "$cpu_value" \
+              --argjson mem "$mem_value" \
+              --argjson restart "$restart_value" \
+              --argjson ready "$ready_value" \
+              --argjson unavail "$unavail_value" \
+              --argjson netin "$net_value" \
+              --argjson error5xx "$error_value" \
+              '{
+                restart_count_last_5m: $restart,
+                cpu_usage_pct: $cpu,
+                memory_usage_bytes: $mem,
+                ready_replica_ratio: $ready,
+                unavailable_replicas: $unavail,
+                network_receive_bytes_per_s: $netin,
+                http_5xx_error_rate: $error5xx
+              }')
 
-          def q(expr):
-              r = requests.get(url, params={"query": expr}, timeout=15)
-              r.raise_for_status()
-              return r.json()
+            echo "Features: $features"
 
-          def val_of(js, default=0.0):
-              try:
-                  return float(js["data"]["result"][0]["value"][1])
-              except Exception:
-                  return default
-
-          # Try pod-level label join first
-          lbl = "label_" + label.replace(".", "_").replace("/", "_")
-          pod_label_query = f'kube_pod_labels{{namespace="{ns}", {lbl}="{val}"}}'
-          pod_labels = q(pod_label_query)
-          use_pod_join = len(pod_labels.get("data", {}).get("result", [])) > 0
-
-          if use_pod_join:
-              L = f'kube_pod_labels{{namespace="{ns}", {lbl}="{val}"}}'
-              def sum_on_pod(expr):
-                  return f'sum(({expr}) * on(namespace,pod) group_left({lbl}) ({L}))'
-
-              cpu = val_of(q(sum_on_pod(f'rate(container_cpu_usage_seconds_total{{namespace="{ns}",container!="POD",image!=""}}[2m])'))) * 100
-              mem = val_of(q(sum_on_pod(f'container_memory_working_set_bytes{{namespace="{ns}",container!="POD",image!=""}}')))
-              net = val_of(q(sum_on_pod(f'rate(container_network_receive_bytes_total{{namespace="{ns}",pod!=""}}[2m])')))
-              restarts = val_of(q(sum_on_pod(f'increase(kube_pod_container_status_restarts_total{{namespace="{ns}"}}[5m])')))
-              dep_lbl_sum = f'sum by (namespace, deployment, {lbl}) (kube_deployment_labels{{namespace="{ns}", {lbl}="{val}"}})'
-              desired = val_of(q(f'sum(kube_deployment_spec_replicas{{namespace="{ns}"}} * on(namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
-              ready = val_of(q(f'sum(kube_deployment_status_ready_replicas{{namespace="{ns}"}} * on(namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
-              unavail = val_of(q(f'sum(kube_deployment_status_replicas_unavailable{{namespace="{ns}"}} * on(namespace, deployment) group_left({lbl}) ({dep_lbl_sum}))'))
-              ratio = (ready / desired) if desired > 0 else 1.0
-          else:
-              # Fallback: deployment-level available/desired
-              cpu = mem = net = restarts = 0.0
-              desired = val_of(q(f'kube_deployment_spec_replicas{{namespace="{ns}",deployment="backend"}}'))
-              available = val_of(q(f'kube_deployment_status_replicas_available{{namespace="{ns}",deployment="backend"}}'))
-              ratio = (available / desired) if desired > 0 else 1.0
-              unavail = max(0.0, desired - available)
-
-          # HTTP 5xx fraction fallback
-          http5xx = 0.0
-          try:
-              n = val_of(q('rate(http_requests_total{code=~"5.."}[2m])'))
-              d = val_of(q('clamp_min(rate(http_requests_total[2m]),1)'))
-              if d > 0:
-                  http5xx = n / d
-          except Exception:
-              pass
-
-          feats = {
-              "restart_count_last_5m": restarts,
-              "cpu_usage_pct": cpu,
-              "memory_usage_bytes": mem,
-              "ready_replica_ratio": round(ratio, 4),
-              "unavailable_replicas": unavail,
-              "network_receive_bytes_per_s": net,
-              "http_5xx_error_rate": http5xx,
-          }
-          print(json.dumps(feats))
-          PY
-          )
-
-          echo "Features: $FEATURES"
+            # Check if we have non-zero metrics
+            if jq -e '.[] | select(. > 0)' <<< "$features" | grep -q .; then
+              echo "✅ Valid metrics obtained"
+              break
+            else
+              echo "⚠️ All metrics zero - retrying in 20s"
+              kill $PROM_PID
+              sleep 20
+              ((attempt++))
+            fi
+          done
+          
+          if [ $attempt -gt $max_attempts ]; then
+            echo "❌ All metric queries returned zero after $max_attempts attempts"
+            exit 1
+          fi
 
           kubectl -n "${NS}" port-forward svc/${BACKEND_SERVICE} 5000:5000 >/tmp/pf-backend2.log 2>&1 &
-          echo $! > /tmp/pf_backend2.pid
-          for i in {1..60}; do curl -sf http://127.0.0.1:5000/healthz >/dev/null && break || sleep 1; done
+          BACKEND_PID=$!
+          trap "kill $BACKEND_PID 2>/dev/null || true" EXIT
+          for i in {1..30}; do curl -sf http://127.0.0.1:5000/healthz >/dev/null && break || sleep 2; done
 
           RESP=$(curl -s -X POST http://127.0.0.1:5000/predict \
-                -H "Content-Type: application/json" -d "${FEATURES}")
+                -H "Content-Type: application/json" -d "${features}")
           echo "Predict: $RESP"
 
-          PROB=$(echo "$RESP" | sed -n 's/.*"probability":\s*\([0-9.]*\).*/\1/p'); : ${PROB:=0}
-          LOADED=$(echo "$RESP" | grep -o '"model_loaded":[^,}]*' | cut -d: -f2 | tr -d ' ')
+          PROB=$(echo "$RESP" | jq -r '.probability // 0')
+          LOADED=$(echo "$RESP" | jq -r '.model_loaded // false')
 
           echo "fail_prob=$PROB" >> $GITHUB_OUTPUT
-          echo "model_loaded=${LOADED:-false}" >> $GITHUB_OUTPUT
+          echo "model_loaded=${LOADED}" >> $GITHUB_OUTPUT
 
-          if [ "${LOADED:-false}" = "true" ] && awk -v p="$PROB" -v thr="${THRESHOLD}" 'BEGIN{exit !(p>=thr)}'; then
+          if [ "${LOADED}" = "true" ] && awk -v p="$PROB" -v thr="${THRESHOLD}" 'BEGIN{exit !(p>=thr)}'; then
             echo "highrisk=true"  >> $GITHUB_OUTPUT
           else
             echo "highrisk=false" >> $GITHUB_OUTPUT
           fi
-
-          kill $(cat /tmp/pf_backend2.pid) 2>/dev/null || true
 
       - name: Auto-heal (rollout restart)
         if: ${{ steps.predict.outputs.highrisk == 'true' && steps.predict.outputs.model_loaded == 'true' }}
@@ -286,9 +373,9 @@ jobs:
           sleep 60
 
           kubectl -n "$PROM_NS" port-forward svc/"$PROM_SVC" 9090:9090 >/tmp/pf-prom2.log 2>&1 &
-          echo $! > /tmp/pf_prom2.pid
-          trap 'kill $(cat /tmp/pf_prom2.pid) 2>/dev/null || true' EXIT
-          for i in {1..60}; do curl -sf http://127.0.0.1:9090/-/ready >/dev/null && break || sleep 1; done
+          PROM_PID=$!
+          trap "kill $PROM_PID 2>/dev/null || true" EXIT
+          for i in {1..30}; do curl -sf http://127.0.0.1:9090/-/ready >/dev/null && break || sleep 2; done
 
           FEATURES=$(python3 - <<'PY'
           import json,requests,os
@@ -349,15 +436,14 @@ jobs:
           )
 
           kubectl -n "${NS}" port-forward svc/${BACKEND_SERVICE} 5000:5000 >/tmp/pf-backend3.log 2>&1 &
-          echo $! > /tmp/pf_backend3.pid
-          for i in {1..60}; do curl -sf http://127.0.0.1:5000/healthz >/dev/null && break || sleep 1; done
+          BACKEND_PID=$!
+          trap "kill $BACKEND_PID 2>/dev/null || true" EXIT
+          for i in {1..30}; do curl -sf http://127.0.0.1:5000/healthz >/dev/null && break || sleep 2; done
 
           RESP=$(curl -s -X POST http://127.0.0.1:5000/predict \
                 -H "Content-Type: application/json" -d "${FEATURES}")
-          PROB=$(echo "$RESP" | sed -n 's/.*"probability":\s*\([0-9.]*\).*/\1/p'); : ${PROB:=0}
+          PROB=$(echo "$RESP" | jq -r '.probability // 0')
           echo "fail_prob2=$PROB" >> $GITHUB_OUTPUT
-
-          kill $(cat /tmp/pf_backend3.pid) 2>/dev/null || true
 
           awk -v p="$PROB" -v thr="${THRESHOLD}" 'BEGIN{exit !(p>=thr)}' \
             && echo "still_high=true"  >> $GITHUB_OUTPUT \
@@ -397,3 +483,9 @@ jobs:
             msg="✅ Rollout kept. Risk p=${{ steps.predict.outputs.fail_prob }}."
             printf '%s\n' "$msg" | jq -Rs '{text: .}' | curl -sS -X POST -H 'Content-Type: application/json' --data @- "$SLACK_WEBHOOK_URL"
           fi
+      
+      - name: Cleanup traffic generator
+        if: always()
+        run: |
+          kubectl -n "${EKS_NAMESPACE}" delete deployment/loadgen --ignore-not-found
+          pkill -f "kubectl.*port-forward" || true
